# antigravity-a2a-a2ui

./: .dockerignore  .gitignore  Dockerfile  README.md  agents-cli-manifest.yaml  pyproject.toml
app/: __init__.py  agent.py
docs/: agents-cli-integration.md  architecture.md  managed-agents-runbook.md
docs/adr/: 0001-repurpose-onto-interactions-api.md  0002-antigravity-sdk-advanced-capabilities.md
experiments/: .env.example  Makefile  README.md  cleanup.mjs  package-lock.json  package.json  run_all.mjs
experiments/findings/: REPORT-20260621T012640Z.md
experiments/lib/: config.mjs  config_names.mjs  platform.mjs  report.mjs
experiments/notebooks/: build_notebook.py  isolation_experiments.ipynb
experiments/probes/: 01_identity.mjs  02_two_agents.mjs  03_cross_tenant.mjs  04_controls.mjs  05_mcp_reachability.mjs  rest_identity.sh
scripts/: package.json  probe_runtime_identity.py  probe_sandbox_identity.mjs  provision_and_run.mjs
src/a2a_workspace/: __init__.py  __main__.py  config.py  container.py  errors.py  messaging.py
src/a2a_workspace/antigravity/: __init__.py  agent_config.py  config_builder.py  hardening.py  hooks.py  policies.py  triggers.py
src/a2a_workspace/broker/: __init__.py  broker.py
src/a2a_workspace/gateway/: __init__.py  a2a.py  agents_cli_compat.py  app.py  dependencies.py  enterprise_api.py  mcp_server.py  registry_api.py
src/a2a_workspace/gemini_enterprise/: __init__.py  agent_models.py  agent_platform.py  client.py  config.py  models.py  skill.py  skill_io.py  skill_registry.py  tools.py  transport.py
src/a2a_workspace/identity/: __init__.py  authorization.py  principal.py  session_token.py  verifier.py
src/a2a_workspace/integrations/: __init__.py  agents_cli.py
src/a2a_workspace/materializer/: __init__.py  integrity.py  materializer.py
src/a2a_workspace/provisioning/: __init__.py  agent_provisioner.py  provisioner.py
src/a2a_workspace/registry/: __init__.py  drafts.py  firestore.py  memory.py  models.py  registry.py
src/a2a_workspace/session/: __init__.py  connection.py  conversations.py  interaction.py  lifecycle.py
src/a2a_workspace/storage/: __init__.py  adapter.py  gcs.py  layout.py  local.py
tests/: conftest.py  test_agent_platform.py  test_agent_provisioner.py  test_agents_cli_integration.py  test_antigravity_advanced.py  test_broker.py  test_drafts_and_integrity.py  test_gateway.py  test_gemini_enterprise.py  test_identity.py  test_inbound_messages.py  test_interaction_orchestrator.py  test_mcp_server.py  test_session_lifecycle.py  test_skills_registry.py  test_storage_isolation.py
